docs/apache-airflow-providers-arangodb/1.0.0/_sources/_api/airflow/providers/arangodb/hooks/arangodb/index.rst.txt
:py:mod:`airflow.providers.arangodb.hooks.arangodb`
===================================================

.. py:module:: airflow.providers.arangodb.hooks.arangodb

.. autoapi-nested-parse::

   This module allows connecting to a ArangoDB.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.arangodb.hooks.arangodb.ArangoDBHook




.. py:class:: ArangoDBHook(arangodb_conn_id = default_conn_name, *args, **kwargs)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Interact with ArangoDB.

   Performs a connection to ArangoDB and retrieves client.

   :param arangodb_conn_id: Reference to :ref:`ArangoDB connection id <howto/connection:arangodb>`.

   .. py:attribute:: conn_name_attr
      :annotation: = arangodb_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = arangodb_default

      

   .. py:attribute:: conn_type
      :annotation: = arangodb

      

   .. py:attribute:: hook_name
      :annotation: = ArangoDB

      

   .. py:method:: get_conn(self)

      Function that initiates a new ArangoDB connection


   .. py:method:: query(self, query, **kwargs)

      Function to create a arangodb session
      and execute the AQL query in the session.

      :param query: AQL query
      :return: Result


   .. py:method:: create_collection(self, name)


   .. py:method:: create_database(self, name)


   .. py:method:: create_graph(self, name)


   .. py:method:: get_ui_field_behaviour()
      :staticmethod:



