docs/apache-airflow-providers-arangodb/2.7.0/_sources/_api/airflow/providers/arangodb/hooks/arangodb/index.rst.txt
:py:mod:`airflow.providers.arangodb.hooks.arangodb`
===================================================

.. py:module:: airflow.providers.arangodb.hooks.arangodb

.. autoapi-nested-parse::

   This module allows connecting to a ArangoDB.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.arangodb.hooks.arangodb.ArangoDBHook




.. py:class:: ArangoDBHook(arangodb_conn_id = default_conn_name, *args, **kwargs)


   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Interact with ArangoDB.

   Performs a connection to ArangoDB and retrieves client.

   :param arangodb_conn_id: Reference to :ref:`ArangoDB connection id <howto/connection:arangodb>`.

   .. py:property:: hosts
      :type: list[str]


   .. py:property:: database
      :type: str


   .. py:property:: username
      :type: str


   .. py:property:: password
      :type: str


   .. py:attribute:: conn_name_attr
      :value: 'arangodb_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'arangodb_default'

      

   .. py:attribute:: conn_type
      :value: 'arangodb'

      

   .. py:attribute:: hook_name
      :value: 'ArangoDB'

      

   .. py:method:: client()

      Initiates a new ArangoDB connection (cached).


   .. py:method:: db_conn()

      Connect to an ArangoDB database and return the database API wrapper.


   .. py:method:: get_conn()

      Initiate a new ArangoDB connection (cached).


   .. py:method:: query(query, **kwargs)

      Create an ArangoDB session and execute the AQL query in the session.

      :param query: AQL query


   .. py:method:: create_collection(name)


   .. py:method:: delete_collection(name)


   .. py:method:: create_database(name)


   .. py:method:: create_graph(name)


   .. py:method:: insert_documents(collection_name, documents)


   .. py:method:: update_documents(collection_name, documents)


   .. py:method:: replace_documents(collection_name, documents)


   .. py:method:: delete_documents(collection_name, documents)


   .. py:method:: get_ui_field_behaviour()
      :classmethod:



